# OpenAI-Shim

./: pyproject.toml
examples/: echo.py  kani.py
openai_shim/models/: ChatAudio.py  ChatCompletionRequest.py  TextCompletionRequest.py  __init__.py
openai_shim/routers/: ChatCompletionRouter.py  TextCompletionRouter.py  base.py
