[project]
name            = "openai_shim"
version         = "0.0.2"
description     = "Provide an easy-to-use OpenAI API layer."
#readme          = "README.md"
#license         = {file = "LICENSE.md"}
requires-python = ">=3.10"
#keywords        = ["automation"]

authors = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

maintainers = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  "License :: OSI Approved :: GPL-3.0 License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn"
]

[project.urls]
#"Homepage"    = "https://github.com/NorthernSec/WebImport"
#"Bug Reports" = "https://github.com/NorthernSec/WebImport/issues"
#"Source"      = "https://github.com/NorthernSec/WebImport"

#[project.scripts]
#webimport-server = "webimport.server:run"


[build-system]
requires      = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openai_shim"]
