[project]
name            = "openai_shim"
version         = "0.0.2"
description     = "Provide an easy-to-use OpenAI API layer."
#readme          = "README.md"
#license         = {file = "LICENSE.md"}
requires-python = ">=3.10"
#keywords        = ["automation"]

authors = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

maintainers = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  "License :: OSI Approved :: GPL-3.0 License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn"
]

[project.urls]
"Homepage"    = "https://github.com/NorthernSec/OpenAI-Shim"
"Bug Reports" = "https://github.com/NorthernSec/OpenAI-Shim/issues"
"Source"      = "https://github.com/NorthernSec/OpenAI-Shim"

[build-system]
requires      = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openai_shim*"]
